--- a/node-lab1/package.json
+++ b/node-lab1/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "node-lab1",
-  "version": "1.0.0",
-  "description": "node lab 1",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "dohalloran74"
-  ],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
-  }
+    "name": "node-lab1",
+    "version": "1.0.0",
+    "description": "node lab 1",
+    "main": "index.js",
+    "scripts": {
+        "start": "babel-node index.js",
+        "dev": "nodemon --exec npm start"
+    },
+    "keywords": [
+        "dohalloran74"
+    ],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-eslint": "^10.1.0",
+        "babel-preset-env": "^1.7.0",
+        "eslint": "^9.16.0"
+    }
 }
