--- a/tasky-api/package.json
+++ b/tasky-api/package.json
@@ -17,6 +17,7 @@
         "nodemon": "^3.1.7"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.4.6",
         "express": "^4.21.1",
         "uuid": "^11.0.3"
